--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "react-dev": "webpack -d --watch",
-    "server-dev": "set DEBUG=express:* & node server/index.js"
+    "server-dev": "nodemon server/index.js"
   },
   "author": "Aaron Chan",
   "license": "MIT",
