--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Application that allows users to keep track of customized workouts, no more pen and paper",
   "main": "index.js",
   "scripts": {
+    "start": "npm install --dev && webpack && node server/index.js",
     "react-dev": "webpack -d --watch",
     "server-dev": "nodemon server/index.js"
   },
